@@ -1,5 +1,8 @@
 This file documents the revision history for the SNClient+ agent.
 
+next:
+         - add alpine support
+
 0.31     Wed Feb 12 18:14:54 CET 2025
          - fix check_files thresholds on total_size
          - update windows exporter to 0.30.2
